...
        return headLabel
    }
    
    private func setupLoginLabel() -> UILabel {
        let loginLabel = UILabel(frame: CGRect(x: 0, y: 0, width: 200, height: 40))
        loginLabel.translatesAutoresizingMaskIntoConstraints = false
        loginLabel.text = "Login"
        loginLabel.textColor = .blue
        loginLabel.font = .systemFont(ofSize: 25)
        return loginLabel
    }
    
    private func setupLoginTexField() -> UITextField {
...
